# pqtrader

./: .gitignore  LICENSE  README.md  USER_GUIDE.md  pyproject.toml  requirements.txt  run_backtest.py  run_simulation.py  setup.py  time_patcher.py
design/: design_v7.md
examples/simple_ma/: config_simulation.yaml  data_provider.py  run.py  strategy.py  time_patcher.py
qtrader/: USER_GUIDE.md
qtrader/analysis/: integrated_server.py  performance.py
qtrader/benchmark/: benchmark_manager.py
qtrader/configs/: backtest_temple.yaml  config_schema.py
qtrader/core/: config.py  context.py  engine.py  lifecycle.py  scheduler.py  time_manager.py  workspace_manager.py
qtrader/data/: interface.py
qtrader/examples/: run_backtest.py
qtrader/runner/: backtest_runner.py
qtrader/strategy/: base.py
qtrader/tests/: conftest.py  test_account.py  test_context.py  test_matching_engine.py  test_order_manager.py  test_position.py  test_position_manager.py  test_public_api.py  test_refactored_accounting.py  test_short_selling_accounting.py
qtrader/trading/: account.py  commission.py  matching_engine.py  order.py  order_manager.py  position.py  position_manager.py  slippage.py
qtrader/utils/: helpers.py  logger.py  serializer copy.py  serializer.py
src/qtrader/analysis/: performance.py  (+1 more)
strategies/: backtest.yaml
tests/: __init__.py  conftest.py  test_context.py  test_order_manager.py  test_position.py  test_position_manager.py  test_refactored_accounting.py  test_short_selling_accounting.py
设计及备份/: 更改要求.txt  设计第一版.md  设计第三版.md  设计第二版.md  设计第五版.md  设计第六版.md  设计第四版.md
(+38 files in other folders)
